[package]
name = "lucent"
version = "0.1.0"
authors = ["Technocoder <8334328+Techno-coder@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tree-sitter = "^0.17"
parking_lot = "^0.11"
codespan-reporting = "^0.9"
codespan = "^0.9"
dashmap = "^3.0"

[dependencies.iced-x86]
version = "^1.2"
default-features = false
features = [
    "std",
    "block_encoder",
    "db",
]

[build-dependencies]
cc = "*"
