[package]
name = "lucent"
version = "0.1.0"
authors = ["Technocoder <8334328+Techno-coder@users.noreply.github.com>"]
edition = "2018"

[dependencies]
lsp-server = "^0.4"
serde_json = "*"
tree-sitter = "^0.17"
tree-sitter-highlight = "^0.3"
parking_lot = "^0.11"
codespan-reporting = "^0.9"
codespan-lsp = "^0.10"
dashmap = "^3.0"
indexmap = "^1.6"

[dependencies.lsp-types]
version = "^0.79"
features = ["proposed"]

[dependencies.clap]
version = "^2.33"
default-features = false

[build-dependencies]
cc = "*"
